--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.5.4"
   },
   "scripts": {
