--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
   "dependencies": {
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.2",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
