add engines node to package.json for heroku

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "description": "A full-stack starter template",
   "main": "index.js",
+  "engines": {
+    "node": "6.11.1"
+  },
   "scripts": {
     "start": "node index.js",
     "heroku-postbuild": "cd client && npm install --only=dev && npm run build",
@@ -13,11 +16,7 @@
     "install:server": "cd server && npm install",
     "install:client": "cd client && npm install"
   },
-  "cacheDirectories": [
-    "node_modules",
-    "server/node_modules",
-    "client/node_modules"
-  ],
+  "cacheDirectories": ["node_modules", "server/node_modules", "client/node_modules"],
   "author": "Joe Turner <jturner@thinkful.com>",
   "license": "MIT",
   "dependencies": {
