--- a/client/package.json
+++ b/client/package.json
@@ -44,9 +44,12 @@
     "whatwg-fetch": "2.0.2"
   },
   "dependencies": {
+    "apollo-client": "^1.9.1",
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
+    "graphql-tag": "^2.4.2",
     "react": "^15.5.4",
+    "react-apollo": "^1.4.15",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.6",
